added bootstrap and other elements so we can see what we have so far

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,22 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constellation</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
-    <header>
-        <!-- Include navigation bar or header content -->
+    <header class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Constellation</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/signup">Sign Up</a>
+                </li>
+                <!-- Add more navigation links as we need -->
+            </ul>
+        </div>
     </header>
 
-    <main>
-        <!-- Need to include main content -->
-        {{{body}}}
+    <main class="container mt-4">
+        <!-- Check if user is logged in -->
+        {{#if session.logged_in}}
+            <p>Hello, {{session.user.userName}}!</p>
+            <!-- Include user dashboard content?? Not sure what we have in mind yet -->
+            {{> homepage}}
+        {{else}}
+            <!-- Include content for non-logged-in users -->
+            {{{body}}}
+        {{/if}}
     </main>
 
-    <footer>
-        <!-- Need to include footer content -->
+    <footer class="mt-4 text-center">
+        <!-- Include footer content -->
+        <p>&copy; 2023 Constellation. All rights reserved.</p>
     </footer>
+
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 
 </html>
+
+
+
