--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constellation</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+        body {
+            background-image: url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Bitter', serif, Arial;
+            font-weight: 800;
+            width: 100%;
+            color: #E0E2DB;
+            font-size: 20px;
+        }
+
+        /
+    </style>
+    
 </head>
 
-<body>
+{{!-- <body style="background-image: url('https://source.unsplash.com/1600x900/?space'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh;">
+     --}}
+
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Constellation</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
