--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -4,7 +4,7 @@
   <h2>{{user.username}}'s Constellation</h2>
   
   <div class="socials">
-    <h3>Social Media</h3>
+    <h3>Socials: </h3>
     <ul>
       {{#if user.social.twitter}}
         <li><a href="{{user.social.twitter}}" target="_blank">Twitter</a></li>
