created partial - working

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -33,5 +33,12 @@
     <p>Explore the constellations created by our community. Sign up to create your own!</p>
     <a href="/signup">Sign Up</a>
     <a href="/login">Login</a>
+
   {{/if}}
 {{/if}}
+
+
+
+{{#each constellations as |constellation|}}
+{{> constellation-details}}
+{{/each}}
