--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -6,6 +6,6 @@
     <h5 class="card-title">{{username}}</h5>
     <p class="card-text">"{{status.status}}"</p>
     <p class="card-text">Twitter: {{social.twitter}}</p>
-    <a href="#" class="btn btn-primary">View Profile</a>
+    <a href="/profile/{{id}}" class="btn btn-primary">View Profile</a>
   </div>
 </div>
