--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -31,8 +31,8 @@
   {{else}}
     <h2>Welcome to Constellation</h2>
     <p>Explore the constellations created by our community. Sign up to create your own!</p>
-    <a href="/signup">Sign Up</a>
-    <a href="/login">Login</a>
+    {{!-- <a href="/signup">Sign Up</a>
+    <a href="/login">Login</a> --}}
 
   {{/if}}
 {{/if}}
