added back basic signup form to be able to test out signup route

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,15 @@
 
+    <form class="signup-form" action="/signup" method="post">
+      <label for="username">Username:</label>
+      <input type="text" id="username-signup" name="username" required />
+
+      {{!-- <label for="email address">Email:</label>
+      <input type="text" id="email" name="email" required /> --}}
+
+      <label for="password">Password:</label>
+      <input type="password" id="password-signup" name="password" required />
+
+      <button type="submit">Signup</button>
+    </form>
+
+<script src="./js/signup.js"></script>
