Progress made on sign up route - seems to be trying to send to /profile page (doesnt exist yet) whenever completing sign up process!

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,8 +3,8 @@
       <label for="username">Username:</label>
       <input type="text" id="username-signup" name="username" required />
 
-      {{!-- <label for="email address">Email:</label>
-      <input type="text" id="email" name="email" required /> --}}
+      <label for="email address">Email:</label>
+      <input type="text" id="email-signup" name="email" required />
 
       <label for="password">Password:</label>
       <input type="password" id="password-signup" name="password" required />
