--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,8 @@
     body {
       background-color: #f5f5f5;
       font-family: 'Space Mono', monospace;
-      color: #333;
+      color: #FAF3DD;
+      text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);
       margin: 0;
       padding: 0;
       display: flex;
