added correct ids and classes

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -77,7 +77,7 @@
       10px rgba(247, 243, 227, 0.8);" class="text-center mb-4">Create an account and join the community.</p>
 
         <form action="/signup" method="post">
-          <div style="text-shadow: 0 0
+          <div class="signup-form" style="text-shadow: 0 0
       10px rgba(247, 243, 227, 0.8);" class="form-group">
             <label for="username-signup">Username:</label>
             <input type="text" id="username-signup" name="username" class="form-control" required />
@@ -92,7 +92,7 @@
           <div style="text-shadow: 0 0
       10px rgba(247, 243, 227, 0.8);" class="form-group">
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" class="form-control" required />
+            <input type="email" id="email-signup" name="email"  class="form-control" required />
           </div>
 
           <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Sign Up</button>
