--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,3 @@
-<html lang="en">
-
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,23 +74,21 @@
         <p style="text-shadow: 0 0
       10px rgba(247, 243, 227, 0.8);" class="text-center mb-4">Create an account and join the community.</p>
 
-        <form action="/signup" method="post">
+        <form class="signup-form" action="/signup" method="post">
           <div style="text-shadow: 0 0
       10px rgba(247, 243, 227, 0.8);" class="form-group">
             <label for="username-signup">Username:</label>
             <input type="text" id="username-signup" name="username" class="form-control" required />
           </div>
 
-          <div style="text-shadow: 0 0
-      10px rgba(247, 243, 227, 0.8);" class="form-group">
-            <label for="password-signup">Password:</label>
-            <input type="password" id="password-signup" name="password" class="form-control" required />
+          <div style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email-signup" name="email" class="form-control" required />
           </div>
 
-          <div style="text-shadow: 0 0
-      10px rgba(247, 243, 227, 0.8);" class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" class="form-control" required />
+          <div style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="form-group">
+            <label for="password-signup">Password:</label>
+            <input type="password" id="password-signup" name="password" class="form-control" required />
           </div>
 
           <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Sign Up</button>
@@ -107,8 +102,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
-</html>
-
-
 <script src="./js/signup.js"></script>
-
