I fixed the login page.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<!-- profile.handlebars -->
+{{!-- <!-- profile.handlebars -->
 
 {{! Check if the data is still loading }}
 {{#if loading}}
@@ -49,6 +49,6 @@
     <a href="/signup">Sign Up</a>
     <a href="/login">Login</a>
   {{/if}}
-{{/if}}
+{{/if}} --}}
 
 
