--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -92,7 +92,9 @@
           </div>
 
           <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Sign Up</button>
-        </form>
+              <p class="text-center mt-3">Already Have An Account? <a href="/login">Login!</a></p>
+
+      </form>
       </div>
     </div>
   </div>
