--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,13 @@
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet" />
-  <title>Login</title>
+  <!-- Other meta tags and links -->
 
-<style>
+  <style>
     body {
       background-image:
         url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
       background-size: cover;
       background-position: center;
-      background-repeat:
-        no-repeat;
+      background-repeat: no-repeat;
       height: 100vh;
       margin: 0;
       font-family: 'Space Mono', monospace;
@@ -21,8 +17,7 @@
 
     .container {
       height: 100vh;
-      display:
-        flex;
+      display: flex;
       align-items: center;
       justify-content: center;
     }
@@ -55,33 +50,37 @@
       box-sizing: border-box;
     }
 
-    button {
+    /* Use Bootstrap classes for styling */
+    .btn {
       color: #fff;
-      padding: 10px 15px;
-      border: none;
-      border-radius:
-        4px;
+      border-radius: 4px;
       cursor: pointer;
     }
   </style>
 
 </head>
 
+<body>
+  <div class="container">
+    <form class="card col-md-6" action="/login" method="post">
+      <div class="card-body">
+        <h2 class="text-center mb-4 welcome-message">Constellation</h2>
 
+        <div class="form-group">
+          <label for="username-login">Username:</label>
+          <input type="text" id="username-login" name="username" class="form-control" required />
+        </div>
 
+        <div class="form-group">
+          <label for="password-login">Password:</label>
+          <input type="password" id="password-login" name="password" class="form-control" required />
+        </div>
 
+        <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Login</button>
+      <p class="text-center mt-3">Don't have an account? <a href="/signup">Sign up!</a></p>
+      </div>
+    </form>
+  </div>
 
-
-
-
-<form class="login-form" action="/login" method="post">
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username" required />
-
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required />
-
-  <button type="submit">Login</button>
-</form>
-
-<script src="./js/login.js"></script>
+  <!-- Other scripts and closing tags -->
+</body>
