added links to the profile

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -52,3 +52,35 @@
 {{/if}} --}}
 
 
+
+<h1>{{constellation.username}}'s Constellation</h1>
+
+<br>
+<br>
+<br>
+
+{{#if constellation.social.twitter}}
+  <a href="https://twitter.com/{{constellation.social.twitter}}">Twitter</a>
+{{/if}}
+
+{{#if constellation.social.instagram}}
+  <a href="https://instagram.com/{{constellation.social.instagram}}">Instagram</a>
+{{/if}}
+
+{{#if constellation.social.github}}
+  <a href="https://github.com/{{constellation.social.github}}">GitHub</a>
+{{/if}}
+
+{{#if constellation.social.youtube}}
+  <a href="https://youtube.com/{{constellation.social.youtube}}">YouTube</a>
+{{/if}}
+
+{{#if constellation.social.tiktok}}
+  <a href="https://tiktok.com/@{{constellation.social.tiktok}}">TikTok</a>
+{{/if}}
+
+{{#if constellation.social.twitch}}
+  <a href="https://twitch.tv/{{constellation.social.twitch}}">Twitch</a>
+{{/if}}
+
+
