--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,60 +2,20 @@
   <!-- Other meta tags and links -->
 
   <style>
-    body {
-      background-image:
-        url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh;
-      margin: 0;
-      font-family: 'Space Mono', monospace;
-      color: #FAF3DD;
-      font-size: 15px;
-    }
-
-    .container {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .card {
-      background-color: #070600;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(247, 243, 227, 0.3);
-    }
-
-    .welcome-message {
-      text-align: center;
-      font-size: 30px;
-      margin-bottom: 20px;
-      color: #FAF3DD;
-      text-shadow: 0 0 10px rgba(247, 243, 227, 0.5);
-      font-family: 'Space Mono', monospace;
-      font-weight: 700;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 16px;
-      box-sizing: border-box;
-    }
-
-    /* Use Bootstrap classes for styling */
-    .btn {
-      color: #fff;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+    body { background-image:
+    url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover; background-position: center; background-repeat:
+    no-repeat; height: 100vh; margin: 0; font-family: 'Space Mono', monospace;
+    color: #FAF3DD; font-size: 15px; } .container { height: 100vh; display:
+    flex; align-items: center; justify-content: center; } .card {
+    background-color: #070600; border-radius: 8px; box-shadow: 0 0 10px
+    rgba(247, 243, 227, 0.3); } .welcome-message { text-align: center;
+    font-size: 30px; margin-bottom: 20px; color: #FAF3DD; text-shadow: 0 0 10px
+    rgba(247, 243, 227, 0.5); font-family: 'Space Mono', monospace; font-weight:
+    700; } label { display: block; margin-bottom: 8px; } input { width: 100%;
+    padding: 8px; margin-bottom: 16px; box-sizing: border-box; } /* Use
+    Bootstrap classes for styling */ .btn { color: #fff; border-radius: 4px;
+    cursor: pointer; }
   </style>
 
 </head>
@@ -68,16 +28,33 @@
 
         <div class="form-group">
           <label for="username-login">Username:</label>
-          <input type="text" id="username-login" name="username" class="form-control" required />
+          <input
+            type="text"
+            id="username-login"
+            name="username"
+            class="form-control"
+            required
+          />
         </div>
 
         <div class="form-group">
           <label for="password-login">Password:</label>
-          <input type="password" id="password-login" name="password" class="form-control" required />
+          <input
+            type="password"
+            id="password-login"
+            name="password"
+            class="form-control"
+            required
+          />
         </div>
 
-        <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Login</button>
-      <p class="text-center mt-3">Don't have an account? <a href="/signup">Sign up!</a></p>
+        <button
+          style="background-color: #43AA8B;"
+          type="submit"
+          class="btn btn-success btn-block"
+        >Login</button>
+        <p class="text-center mt-3">Don't have an account?
+          <a href="/signup">Sign up!</a></p>
       </div>
     </form>
   </div>
