--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,8 +2,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <title>Sign Up - Constellation</title>
   <style>
     body {
@@ -64,6 +65,15 @@
         4px;
       cursor: pointer;
     }
+  .eye-icon {
+      width: 20px;
+      position: absolute;
+      right: 45px;
+      top: 70%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      color: #070600;
+    }
   </style>
 </head>
 
@@ -72,12 +82,10 @@
     <div class="card col-md-6">
       <div class="card-body">
         <h2 class="text-center mb-4 welcome-message">Welcome to Constellation!</h2>
-        <p style="text-shadow: 0 0
-      10px rgba(247, 243, 227, 0.8);" class="text-center mb-4">Create an account and join the community.</p>
+        <p style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="text-center mb-4">Create an account and join the community.</p>
 
         <form action="/signup" method="post">
-          <div style="text-shadow: 0 0
-      10px rgba(247, 243, 227, 0.8);" class="form-group">
+          <div style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="form-group">
             <label for="username-signup">Username:</label>
             <input type="text" id="username-signup" name="username" class="form-control" required />
           </div>
@@ -87,22 +95,37 @@
             <input type="email" id="email-signup" name="email" class="form-control" required />
           </div>
 
-          <div style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="form-group">
-            <label for="password-signup">Password:</label>
-            <input type="password" id="password-signup" name="password" class="form-control" required />
-          </div>
+          <div class="form-group input-container">
+    <label for="password-signup">Password:</label>
+    <input type="password" id="password-signup" name="password" class="form-control" required />
+    <img src="/eye.svg" alt="Show Password" class="eye-icon" id="showPassword">
+    <img src="/eye-slash.svg" alt="Hide Password" class="eye-icon" id="hidePassword" style="display: none;">
+</div>
 
-           <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Sign Up</button>
-              <p class="text-center mt-3">Already Have An Account? <a href="/login">Login!</a></p>
-
-      </form>
+          <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Sign Up</button>
+          <p class="text-center mt-3">Already Have An Account? <a href="/login">Login!</a></p>
+        </form>
       </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script>
+    const showPasswordIcon = document.querySelector('#showPassword');
+    const hidePasswordIcon = document.querySelector('#hidePassword');
+    const password = document.querySelector('#password-signup');
+
+    showPasswordIcon.addEventListener('click', function () {
+        password.setAttribute('type', 'text');
+        showPasswordIcon.style.display = 'none';
+        hidePasswordIcon.style.display = 'block';
+    });
+
+    hidePasswordIcon.addEventListener('click', function () {
+        password.setAttribute('type', 'password');
+        showPasswordIcon.style.display = 'block';
+        hidePasswordIcon.style.display = 'none';
+    });
+</script>
 </body>
 
-<script src="./js/signup.js"></script>
+</html>
