formatted everything with Prittier

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -51,20 +51,20 @@
   {{/if}}
 {{/if}} --}}
 
-
-
 <h1>{{constellation.username}}'s Constellation</h1>
 
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
 
 {{#if constellation.social.twitter}}
   <a href="https://twitter.com/{{constellation.social.twitter}}">Twitter</a>
 {{/if}}
 
 {{#if constellation.social.instagram}}
-  <a href="https://instagram.com/{{constellation.social.instagram}}">Instagram</a>
+  <a
+    href="https://instagram.com/{{constellation.social.instagram}}"
+  >Instagram</a>
 {{/if}}
 
 {{#if constellation.social.github}}
@@ -82,5 +82,3 @@
 {{#if constellation.social.twitch}}
   <a href="https://twitch.tv/{{constellation.social.twitch}}">Twitch</a>
 {{/if}}
-
-
