--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,75 +1,30 @@
 <head>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+  />
   <!-- Other meta tags and links -->
 
   <style>
-    body {
-      background-image: url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh;
-      margin: 0;
-      font-family: 'Space Mono', monospace;
-      color: #FAF3DD;
-      font-size: 15px;
-    }
-
-    .container {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .card {
-      background-color: #070600;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(247, 243, 227, 0.3);
-    }
-
-    .welcome-message {
-      text-align: center;
-      font-size: 30px;
-      margin-bottom: 20px;
-      color: #FAF3DD;
-      text-shadow: 0 0 10px rgba(247, 243, 227, 0.5);
-      font-family: 'Space Mono', monospace;
-      font-weight: 700;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    .input-container {
-      position: relative;
-    }
-
-    input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 16px;
-      box-sizing: border-box;
-    }
-
-    .eye-icon {
-      width: 20px;
-      position: absolute;
-      right: 10px;
-      top: 70%;
-      transform: translateY(-50%);
-      cursor: pointer;
-      color: #070600;
-    }
-
-    .btn {
-      color: #fff;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+    body { background-image:
+    url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover; background-position: center; background-repeat:
+    no-repeat; height: 100vh; margin: 0; font-family: 'Space Mono', monospace;
+    color: #FAF3DD; font-size: 15px; } .container { height: 100vh; display:
+    flex; align-items: center; justify-content: center; } .card {
+    background-color: #070600; border-radius: 8px; box-shadow: 0 0 10px
+    rgba(247, 243, 227, 0.3); } .welcome-message { text-align: center;
+    font-size: 30px; margin-bottom: 20px; color: #FAF3DD; text-shadow: 0 0 10px
+    rgba(247, 243, 227, 0.5); font-family: 'Space Mono', monospace; font-weight:
+    700; } label { display: block; margin-bottom: 8px; } .input-container {
+    position: relative; } input { width: 100%; padding: 8px; margin-bottom:
+    16px; box-sizing: border-box; } .eye-icon { width: 20px; position: absolute;
+    right: 10px; top: 70%; transform: translateY(-50%); cursor: pointer; color:
+    #070600; } .btn { color: #fff; border-radius: 4px; cursor: pointer; }
   </style>
 </head>
 
@@ -92,18 +47,29 @@
         </div>
 
         <div class="form-group input-container">
-    <label for="password-login">Password:</label>
-    <input
-        type="password"
-        id="password-login"
-        placeholder="Password"
-        name="password"
-        class="form-control"
-        required
-    />
-    <img src="/eye.svg" alt="Show Password" class="eye-icon" id="showPassword">
-    <img src="/eye-slash.svg" alt="Hide Password" class="eye-icon" id="hidePassword" style="display: none;">
-</div>
+          <label for="password-login">Password:</label>
+          <input
+            type="password"
+            id="password-login"
+            placeholder="Password"
+            name="password"
+            class="form-control"
+            required
+          />
+          <img
+            src="/eye.svg"
+            alt="Show Password"
+            class="eye-icon"
+            id="showPassword"
+          />
+          <img
+            src="/eye-slash.svg"
+            alt="Hide Password"
+            class="eye-icon"
+            id="hidePassword"
+            style="display: none;"
+          />
+        </div>
 
         <button
           style="background-color: #43AA8B;"
@@ -117,22 +83,16 @@
   </div>
 
   <script>
-    const showPasswordIcon = document.querySelector('#showPassword');
-    const hidePasswordIcon = document.querySelector('#hidePassword');
-    const password = document.querySelector('#password-login');
-
+    const showPasswordIcon = document.querySelector('#showPassword'); const
+    hidePasswordIcon = document.querySelector('#hidePassword'); const password =
+    document.querySelector('#password-login');
     showPasswordIcon.addEventListener('click', function () {
-        password.setAttribute('type', 'text');
-        showPasswordIcon.style.display = 'none';
-        hidePasswordIcon.style.display = 'block';
-    });
-
+    password.setAttribute('type', 'text'); showPasswordIcon.style.display =
+    'none'; hidePasswordIcon.style.display = 'block'; });
     hidePasswordIcon.addEventListener('click', function () {
-        password.setAttribute('type', 'password');
-        showPasswordIcon.style.display = 'block';
-        hidePasswordIcon.style.display = 'none';
-    });
-</script>
+    password.setAttribute('type', 'password'); showPasswordIcon.style.display =
+    'block'; hidePasswordIcon.style.display = 'none'; });
+  </script>
 
   <!-- Other scripts and closing tags -->
 </body>
