--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -1,8 +1,13 @@
 <!-- constellation-details.handlebars -->
 
-  
 <div class="card text-white bg-dark" style="width: 18rem;">
-  <img class="card-img-top" src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="person amongst stars" alt="Card image cap">
+  <img
+    class="card-img-top"
+    src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    class="card-img-top"
+    alt="person amongst stars"
+    alt="Card image cap"
+  />
   <div class="card-body">
     <h5 class="card-title">@{{username}}</h5>
     <p class="card-text small">"{{status.status}}"</p>
