--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,131 +1,126 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <title>Sign Up - Constellation</title>
-  <style>
-    body {
-      background-image:
-        url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-      background-size: cover;
-      background-position: center;
-      background-repeat:
-        no-repeat;
-      height: 100vh;
-      margin: 0;
-      font-family: 'Space Mono', monospace;
-      color: #FAF3DD;
-      font-size: 15px;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <title>Sign Up - Constellation</title>
+    <style>
+      body { background-image:
+      url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+      background-size: cover; background-position: center; background-repeat:
+      no-repeat; height: 100vh; margin: 0; font-family: 'Space Mono', monospace;
+      color: #FAF3DD; font-size: 15px; } .container { height: 100vh; display:
+      flex; align-items: center; justify-content: center; } .card {
+      background-color: #070600; border-radius: 8px; box-shadow: 0 0 10px
+      rgba(247, 243, 227, 0.3); } .welcome-message { text-align: center;
+      font-size: 30px; margin-bottom: 20px; color: #FAF3DD; text-shadow: 0 0
+      10px rgba(247, 243, 227, 0.5); font-family: 'Space Mono', monospace;
+      font-weight: 700; } label { display: block; margin-bottom: 8px; } input {
+      width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box; }
+      button { color: #fff; padding: 10px 15px; border: none; border-radius:
+      4px; cursor: pointer; } .eye-icon { width: 20px; position: absolute;
+      right: 45px; top: 70%; transform: translateY(-50%); cursor: pointer;
+      color: #070600; }
+    </style>
+  </head>
 
-    .container {
-      height: 100vh;
-      display:
-        flex;
-      align-items: center;
-      justify-content: center;
-    }
+  <body>
+    <div class="container">
+      <div class="card col-md-6">
+        <div class="card-body">
+          <h2 class="text-center mb-4 welcome-message">Welcome to Constellation!</h2>
+          <p
+            style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);"
+            class="text-center mb-4"
+          >Create an account and join the community.</p>
 
-    .card {
-      background-color: #070600;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(247, 243, 227, 0.3);
-    }
+          <form action="/signup" method="post">
+            <div
+              style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);"
+              class="form-group"
+            >
+              <label for="username-signup">Username:</label>
+              <input
+                type="text"
+                id="username-signup"
+                name="username"
+                class="form-control"
+                required
+              />
+            </div>
 
-    .welcome-message {
-      text-align: center;
-      font-size: 30px;
-      margin-bottom: 20px;
-      color: #FAF3DD;
-      text-shadow: 0 0 10px rgba(247, 243, 227, 0.5);
-      font-family: 'Space Mono', monospace;
-      font-weight: 700;
-    }
+            <div
+              style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);"
+              class="form-group"
+            >
+              <label for="email">Email:</label>
+              <input
+                type="email"
+                id="email-signup"
+                name="email"
+                class="form-control"
+                required
+              />
+            </div>
 
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
+            <div class="form-group input-container">
+              <label for="password-signup">Password:</label>
+              <input
+                type="password"
+                id="password-signup"
+                name="password"
+                class="form-control"
+                required
+              />
+              <img
+                src="/eye.svg"
+                alt="Show Password"
+                class="eye-icon"
+                id="showPassword"
+              />
+              <img
+                src="/eye-slash.svg"
+                alt="Hide Password"
+                class="eye-icon"
+                id="hidePassword"
+                style="display: none;"
+              />
+            </div>
 
-    input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 16px;
-      box-sizing: border-box;
-    }
-
-    button {
-      color: #fff;
-      padding: 10px 15px;
-      border: none;
-      border-radius:
-        4px;
-      cursor: pointer;
-    }
-  .eye-icon {
-      width: 20px;
-      position: absolute;
-      right: 45px;
-      top: 70%;
-      transform: translateY(-50%);
-      cursor: pointer;
-      color: #070600;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="card col-md-6">
-      <div class="card-body">
-        <h2 class="text-center mb-4 welcome-message">Welcome to Constellation!</h2>
-        <p style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="text-center mb-4">Create an account and join the community.</p>
-
-        <form action="/signup" method="post">
-          <div style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="form-group">
-            <label for="username-signup">Username:</label>
-            <input type="text" id="username-signup" name="username" class="form-control" required />
-          </div>
-
-          <div style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);" class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email-signup" name="email" class="form-control" required />
-          </div>
-
-          <div class="form-group input-container">
-    <label for="password-signup">Password:</label>
-    <input type="password" id="password-signup" name="password" class="form-control" required />
-    <img src="/eye.svg" alt="Show Password" class="eye-icon" id="showPassword">
-    <img src="/eye-slash.svg" alt="Hide Password" class="eye-icon" id="hidePassword" style="display: none;">
-</div>
-
-          <button style="background-color: #43AA8B;" type="submit" class="btn btn-success btn-block">Sign Up</button>
-          <p class="text-center mt-3">Already Have An Account? <a href="/login">Login!</a></p>
-        </form>
+            <button
+              style="background-color: #43AA8B;"
+              type="submit"
+              class="btn btn-success btn-block"
+            >Sign Up</button>
+            <p class="text-center mt-3">Already Have An Account?
+              <a href="/login">Login!</a></p>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script>
-    const showPasswordIcon = document.querySelector('#showPassword');
-    const hidePasswordIcon = document.querySelector('#hidePassword');
-    const password = document.querySelector('#password-signup');
-
-    showPasswordIcon.addEventListener('click', function () {
-        password.setAttribute('type', 'text');
-        showPasswordIcon.style.display = 'none';
-        hidePasswordIcon.style.display = 'block';
-    });
-
-    hidePasswordIcon.addEventListener('click', function () {
-        password.setAttribute('type', 'password');
-        showPasswordIcon.style.display = 'block';
-        hidePasswordIcon.style.display = 'none';
-    });
-</script>
-</body>
+    <script>
+      const showPasswordIcon = document.querySelector('#showPassword'); const
+      hidePasswordIcon = document.querySelector('#hidePassword'); const password
+      = document.querySelector('#password-signup');
+      showPasswordIcon.addEventListener('click', function () {
+      password.setAttribute('type', 'text'); showPasswordIcon.style.display =
+      'none'; hidePasswordIcon.style.display = 'block'; });
+      hidePasswordIcon.addEventListener('click', function () {
+      password.setAttribute('type', 'password'); showPasswordIcon.style.display
+      = 'block'; hidePasswordIcon.style.display = 'none'; });
+    </script>
+  </body>
 
 </html>
