Updated styling on homepage to center title and slogan, as well as constellations being rendered in

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,39 +2,46 @@
 
 {{!-- Check if the data is still loading --}}
 {{#if loading}}
-  <div class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
+<div class="spinner-border" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
 {{else}}
-  {{#if session.logged_in}}
-    <h2>Hello, {{session.user.userName}}!</h2>
-    <section>
-      <h3>Your Constellations</h3>
-      <ul>
-        {{#each session.user.constellations}}
-          <li>{{name}}</li>
-          <!-- Display more constellation details as needed -->
-        {{/each}}
-      </ul>
-    </section>
-    <section>
-      <h3>Your Comments</h3>
-      <ul>
-        {{#each session.user.comments}}
-          <li>{{content}}</li>
-          <!-- Display more comment details as needed -->
-        {{/each}}
-      </ul>
-    </section>
-    <!-- Add more sections for other user-related content -->
-    <a href="/create-constellation">Create Constellation</a>
-  {{else}}
+{{#if session.logged_in}}
+<h2>Hello, {{session.user.userName}}!</h2>
+<section>
+  <h3>Your Constellations</h3>
+  <ul>
+    {{#each session.user.constellations}}
+    <li>{{name}}</li>
+    <!-- Display more constellation details as needed -->
+    {{/each}}
+  </ul>
+</section>
+<section>
+  <h3>Your Comments</h3>
+  <ul>
+    {{#each session.user.comments}}
+    <li>{{content}}</li>
+    <!-- Display more comment details as needed -->
+    {{/each}}
+  </ul>
+</section>
+<!-- Add more sections for other user-related content -->
+<a href="/create-constellation">Create Constellation</a>
+{{else}}
+<div class="d-flex flex-column justify-content-center">
+  <div class="home-header text-center">
     <h2>Welcome to Constellation</h2>
+  </div>
+  <br>
+  <div class="home-slogan text-center">
     <p>Explore the constellations created by our community. Sign up to create your own!</p>
-    {{!-- <a href="/signup">Sign Up</a>
-    <a href="/login">Login</a> --}}
+  </div>
+</div>
+{{!-- <a href="/signup">Sign Up</a>
+<a href="/login">Login</a> --}}
 
-  {{/if}}
+{{/if}}
 {{/if}}
 
 
