--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -51,12 +51,14 @@
   {{/if}}
 {{/if}} --}}
 
+
+
 <h1>{{constellation.username}}'s Constellation</h1>
 
 <br />
 <br />
 <br />
-
+{{!-- To DO: set these up to open in a new tab vs current window changing --}}
 {{#if constellation.social.twitter}}
   <a href="https://twitter.com/{{constellation.social.twitter}}">Twitter</a>
 {{/if}}
