tiny bit of opacity added to contellation partial card

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -35,7 +35,7 @@
   </div>
   <br>
   <div class="home-slogan text-center">
-    <p>Explore the constellations created by our community. Sign up to create your own!</p>
+    <p><i>Explore the constellations created by our community. Sign up to create your own!</i></p>
   </div>
 </div>
 {{!-- <a href="/signup">Sign Up</a>
