--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,131 +1,186 @@
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Constellation</title>
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Constellation</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet" />
 
-    <style>
-      body { background-image:
-      url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-      background-size: cover; background-position: center; background-repeat:
-      no-repeat; height: 100vh; margin: 0; font-family: 'Space Mono', monospace;
-      width: 100%; color: #FAF3DD; font-size: 15px; } .navbar {
-      background-color: rgba(0, 0, 0, 0.8); /* Adjust the alpha value as needed
-      */ font-size: 15px; } .navbar-brand { font-size: 25px; } .material-icons {
-      font-size: 25px; } .glow-on-hover { width: 220px; height: 50px; border:
-      none; outline: none; color: #fff; background: rgba(0, 0, 0, 0.8); /*
-      Adjust the alpha value as needed */ cursor: pointer; position: relative;
-      z-index: 0; border-radius: 10px; } .glow-on-hover:before { content: '';
+  {{!-- removed font style: font-family: 'Space Mono', monospace; --}}
+  <style>
+    body {
+      background-image:
+        url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+      background-size: cover;
+      background-position: center;
+      background-repeat:
+        no-repeat;
+      height: 100vh;
+      margin: 0;
+      width: 100%;
+      color: #FAF3DD;
+      font-size: 15px;
+    }
+
+    .navbar {
+      background-color: rgba(0, 0, 0, 0.8);
+      /* Adjust the alpha value as needed
+      */
+      font-size: 15px;
+    }
+
+    .navbar-brand {
+      font-size: 25px;
+    }
+
+    .material-icons {
+      font-size: 25px;
+    }
+
+    .glow-on-hover {
+      width: 220px;
+      height: 50px;
+      border:
+        none;
+      outline: none;
+      color: #fff;
+      background: rgba(0, 0, 0, 0.8);
+      /*
+      Adjust the alpha value as needed */
+      cursor: pointer;
+      position: relative;
+      z-index: 0;
+      border-radius: 10px;
+    }
+
+    .glow-on-hover:before {
+      content: '';
       background: linear-gradient(45deg, #f5f2f2, #0f0e0e, #f9f9f6, #060606,
-      #f1f4f4, #090909, #fbfafb, #020202, #f7f5f5); position: absolute; top:
-      -2px; left: -2px; background-size: 400%; z-index: -1; filter: blur(5px);
-      width: calc(100% + 4px); height: calc(100% + 4px); animation: glowing 20s
-      linear infinite; opacity: 0; transition: opacity .3s ease-in-out;
-      border-radius: 10px; } .glow-on-hover:active { color: #000; }
-      .glow-on-hover:active:after { background: transparent; }
-      .glow-on-hover:hover:before { opacity: 1; } .glow-on-hover:after {
-      z-index: -1; content: ''; position: absolute; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.8); /* Adjust the alpha value as needed */
-      left: 0; top: 0; border-radius: 10px; } @keyframes glowing { 0% {
-      background-position: 0 0; } 50% { background-position: 400% 0; } 100% {
-      background-position: 0 0; } }
-    </style>
+          #f1f4f4, #090909, #fbfafb, #020202, #f7f5f5);
+      position: absolute;
+      top:
+        -2px;
+      left: -2px;
+      background-size: 400%;
+      z-index: -1;
+      filter: blur(5px);
+      width: calc(100% + 4px);
+      height: calc(100% + 4px);
+      animation: glowing 20s linear infinite;
+      opacity: 0;
+      transition: opacity .3s ease-in-out;
+      border-radius: 10px;
+    }
 
-  </head>
+    .glow-on-hover:active {
+      color: #000;
+    }
 
-  <body>
+    .glow-on-hover:active:after {
+      background: transparent;
+    }
 
-    <!-- Navbar -->
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <!-- Container wrapper -->
-      <div class="container-fluid">
-        <!-- Navbar brand without glowing effect -->
-        <a
-          style="color: #FAF3DD;"
-          class="navbar-brand"
-          href="/"
-        >Constellation</a>
+    .glow-on-hover:hover:before {
+      opacity: 1;
+    }
 
-        <!-- Toggle button with glowing effect -->
-        <button
-          class="navbar-toggler glow-on-hover"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i style="color: #FAF3DD;" class="material-icons">Menu</i>
-        </button>
+    .glow-on-hover:after {
+      z-index: -1;
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      /* Adjust the alpha value as needed */
+      left: 0;
+      top: 0;
+      border-radius: 10px;
+    }
 
-        <!-- Collapsible wrapper -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <!-- Left links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a style="color: #FAF3DD;" class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a
-                style="color: #FAF3DD;"
-                class="nav-link"
-                href="/login"
-              >Login</a>
-            </li>
-            <li class="nav-item">
-              <a style="color: #FAF3DD;" class="nav-link" href="/signup">Sign Up</a>
-            </li>
-          </ul>
-          <!-- Left links -->
-        </div>
-        <!-- Collapsible wrapper -->
+    @keyframes glowing {
+      0% {
+        background-position: 0 0;
+      }
+
+      50% {
+        background-position: 400% 0;
+      }
+
+      100% {
+        background-position: 0 0;
+      }
+    }
+  </style>
+
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+      <!-- Navbar brand without glowing effect -->
+      <a style="color: #FAF3DD;" class="navbar-brand" href="/">Constellation</a>
+
+      <!-- Toggle button with glowing effect -->
+      <button class="navbar-toggler glow-on-hover" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i style="color: #FAF3DD;" class="material-icons">Menu</i>
+      </button>
+
+      <!-- Collapsible wrapper -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- Left links -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a style="color: #FAF3DD;" class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #FAF3DD;" class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #FAF3DD;" class="nav-link" href="/signup">Sign Up</a>
+          </li>
+        </ul>
+        <!-- Left links -->
       </div>
-      <!-- Container wrapper -->
-    </nav>
-    <!-- Navbar -->
+      <!-- Collapsible wrapper -->
+    </div>
+    <!-- Container wrapper -->
+  </nav>
+  <!-- Navbar -->
 
-    <!-- Navbar -->
+  <!-- Navbar -->
 
-    <main class="container mt-4">
-      <!-- Check if user is logged in -->
-      {{!-- {{#if session.logged_in}}
-            <p>Hello, {{session.user.userName}}!</p>
-            <!-- Include user dashboard content?? Not sure what we have in mind yet -->
-            {{> homepage}}
-        {{else}}
-            <!-- Include content for non-logged-in users -->
-        {{/if}} --}}
+  <main class="container mt-4">
+    <!-- Check if user is logged in -->
+    {{!-- {{#if session.logged_in}}
+    <p>Hello, {{session.user.userName}}!</p>
+    <!-- Include user dashboard content?? Not sure what we have in mind yet -->
+    {{> homepage}}
+    {{else}}
+    <!-- Include content for non-logged-in users -->
+    {{/if}} --}}
 
-      {{{body}}}
-    </main>
+    {{{body}}}
+  </main>
 
-    <footer class="mt-4 text-center">
-      <!-- Include footer content -->
-      <p>&copy; 2023 Constellation. All rights reserved.</p>
-    </footer>
+  <footer class="mt-4 text-center">
+    <!-- Include footer content -->
+    <p>&copy; 2023 Constellation. All rights reserved.</p>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    ></script>
-    {{! <script src="/scripts/main.js"></script> }}
-  </body>
+  <script src="https://code.jquery.com/jquery-3.3.im.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  {{!
+  <script src="/scripts/main.js"></script> }}
+</body>
 
 </html>
