--- a/views/partials/constellation-details.handlebars
+++ b/views/partials/constellation-details.handlebars
@@ -1,13 +1,13 @@
 <!-- constellation-details.handlebars -->
 
-<div class="d-flex justify-content-center m-3">
-  <div class="card text-white bg-dark " style="width: 28rem;">
+<div class="d-flex flex-wrap justify-content-center mt-3">
+  <div class="card text-white bg-dark m-3" style="width: 20rem; opacity: 0.95; flex: 0 0 30%;">
     <img class="card-img-top"
       src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
       class="card-img-top" alt="person amongst stars" alt="Card image cap" />
     <div class="card-body">
       <h5 class="card-title">@{{username}}</h5>
-      <p class="card-text small">"{{status.status}}"</p>
+      <p class="card-text small">"<i>{{status.status}}"</i></p>
       <a href="/profile/{{id}}" class="btn btn-primary">View Profile</a>
     </div>
   </div>
