Login is successful now - need it to render the users profile and not general profile page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,7 +30,7 @@
 
 <body>
   <div class="container">
-    <form class="card col-md-6" action="/login" method="post">
+    <form class="login-form card col-md-6" action="/api/users/login" method="post">
       <div class="card-body">
         <h2 class="text-center mb-4 welcome-message">Constellation</h2>
 
