slight font styling changes to profile view

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -34,8 +34,8 @@
     <h2>Welcome to Constellation</h2>
   </div>
   <br>
-  <div class="home-slogan text-center">
-    <p><i>Explore the constellations created by our community. Sign up to create your own!</i></p>
+  <div class="home-slogan text-center font-weight-normal">
+    <p><i>Explore constellations created by our community. Sign up to create your own!</i></p>
   </div>
 </div>
 {{!-- <a href="/signup">Sign Up</a>
