--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -157,22 +157,18 @@
           </li>
           {{/if}}
         </ul>
-        <!-- Left links -->
+      
       </div>
-      <!-- Collapsible wrapper -->
+      
     </div>
-    <!-- Container wrapper -->
+ 
   </nav>
-  <!-- Navbar -->
-
   <!-- Navbar -->
 
   <main class="container mt-4">
     <!-- Check if user is logged in -->
     {{!-- {{#if session.logged_in}}
     <p>Hello, {{session.user.userName}}!</p>
-    <!-- Include user dashboard content?? Not sure what we have in mind yet -->
-    {{> homepage}}
     {{else}}
     <!-- Include content for non-logged-in users -->
     {{/if}} --}}
@@ -180,7 +176,7 @@
     {{{body}}}
   </main>
 
-  <footer class="mt-4 text-center">
+  <footer class="fixed-bottom mt-4 text-center">
     <!-- Include footer content -->
     <p>&copy; 2023 Constellation. All rights reserved.</p>
   </footer>
@@ -190,7 +186,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   {{!
   <script src="/scripts/main.js"></script> }}
-  {{#if logged_in}}<script src="/js/logout.js"></script>{{/if}}
   {{#if logged_in}}<script src="/js/logout.js"></script>{{/if}}
 </body>
 
