--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -52,45 +52,47 @@
 
 
 <div class="profile-username d-flex justify-content-center">
-  <h1 class="text-center">{{constellation.username}}'s Constellation</h1>
+  <h1 class="text-center font-weight-bold">{{constellation.username}}'s Constellation</h1>
 </div>
 
-<br />
 <br />
 <br />
 
 <div class="socials-container d-flex flex-column justify-content-center text-center m-2">
-{{#if constellation.social.twitter}}
-<a href="https://twitter.com/{{constellation.social.twitter}}">Twitter</a>
-{{/if}}
+  <div class="mb-3">
+    {{#if constellation.social.twitter}}
+    <a href="https://twitter.com/{{constellation.social.twitter}}" class="text-white font-weight-bolder">Twitter</a>
+    {{/if}}
+  </div>
 
-<div class="mb-3">
-{{#if constellation.social.instagram}}
-<a href="https://instagram.com/{{constellation.social.instagram}}">Instagram</a>
-{{/if}}
-</div>
+  <div class="mb-3">
+    {{#if constellation.social.instagram}}
+    <a href="https://instagram.com/{{constellation.social.instagram}}" class="text-white font-weight-bolder">Instagram</a>
+    {{/if}}
+  </div>
 
-<div class="mb-3">
-{{#if constellation.social.github}}
-<a href="https://github.com/{{constellation.social.github}}">GitHub</a>
-{{/if}}
-</div>
+  <div class="mb-3">
+    {{#if constellation.social.github}}
+    <a href="https://github.com/{{constellation.social.github}}" class="text-white font-weight-bolder">GitHub</a>
+    {{/if}}
+  </div>
 
-<div class="mb-3">
-{{#if constellation.social.youtube}}
-<a href="https://youtube.com/@{{constellation.social.youtube}}">YouTube</a>
-{{/if}}
-</div>
+  <div class="mb-3">
+    {{#if constellation.social.youtube}}
+    <a href="https://youtube.com/@{{constellation.social.youtube}}" class="text-white font-weight-bolder">YouTube</a>
+    {{/if}}
+  </div>
 
-<div class="mb-3">
-{{#if constellation.social.tiktok}}
-<a href="https://tiktok.com/@{{constellation.social.tiktok}}">TikTok</a>
-{{/if}}
-</div>
+  <div class="mb-3">
+    {{#if constellation.social.tiktok}}
+    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" class="text-white font-weight-bolder">TikTok</a>
+    {{/if}}
+  </div>
 
-<div class="mb-3">
-{{#if constellation.social.twitch}}
-<a href="https://twitch.tv/{{constellation.social.twitch}}">Twitch</a>
-{{/if}}
-</div>
+  <div class="mb-3">
+    {{#if constellation.social.twitch}}
+    <a href="https://twitch.tv/{{constellation.social.twitch}}" class="text-white font-weight-bolder">Twitch</a>
+    {{/if}}
+  </div>
+
 </div>
