working on socials route after signing up

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -149,6 +149,9 @@
           <li class="nav-item">
             <a style="color: #FAF3DD;" class="nav-link" href="/profile/"{{user.id}}>Profile</a>
           </li>
+           <li class="nav-item">
+            <a style="color: #FAF3DD;" class="nav-link" href="/socials/">Socials</a>
+          </li>
           <li class="nav-item logout">
             <a style="color: #FAF3DD; background-color: rgba(0, 0, 0); cursor: pointer;" class="nav-link logout" id="logout">Logout</a>
           </li>
