minor style changes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -32,7 +32,7 @@
   <div class="container">
     <form class="login-form card col-md-6" action="/api/users/login" method="post">
       <div class="card-body">
-        <h2 class="text-center mb-4 welcome-message">Constellation</h2>
+        <h2 class="text-center mb-4 welcome-message">Login</h2>
 
         <div class="form-group">
           <label for="username-login">Username:</label>
