--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -39,11 +39,11 @@
     <div class="container">
       <div class="card col-md-6">
         <div class="card-body">
-          <h2 class="text-center mb-4 welcome-message">Welcome to Constellation!</h2>
+          <h2 class="text-center mb-4 welcome-message">Welcome to Constellation</h2>
           <p
             style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);"
             class="text-center mb-4"
-          ><i>Create an account and join the community.</i></p>
+          ><i>Sign up to join the community!</i></p>
 
           <form action="/api/users/signup" method="post">
             <div
@@ -104,7 +104,7 @@
               class="btn btn-success btn-block signup-form"
             >Sign Up</button>
             <p class="text-center mt-3">Already Have An Account?
-              <a href="/login">Login!</a></p>
+              <a href="/login">Login</a></p>
           </form>
         </div>
       </div>
