--- a/views/socials.handlebars
+++ b/views/socials.handlebars
@@ -1,8 +1,8 @@
 <body>
-  <div class="container">
+  <div class="d-flex container justify-content-center">
     <form class="socials-form card col-md-6" action="/api/users/socials" method="post">
       <div class="card-body">
-        <h2 class="text-center mb-4 social-message">Connect your socials</h2>
+        <h2 class="text-center mb-4 social-message">Connect your socials to create your constellation!</h2>
 
         <div class="form-group">
           <label for="twitter-login">Twitter:</label>
