Set up profile page to open social links in a NEW TAB

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -61,37 +61,37 @@
 <div class="socials-container d-flex flex-column justify-content-center text-center m-2">
   <div class="mb-3">
     {{#if constellation.social.twitter}}
-    <a href="https://twitter.com/{{constellation.social.twitter}}" class="text-white font-weight-bolder">Twitter</a>
+    <a href="https://twitter.com/{{constellation.social.twitter}}" target="_blank" class="text-white font-weight-bolder">Twitter</a>
     {{/if}}
   </div>
 
   <div class="mb-3">
     {{#if constellation.social.instagram}}
-    <a href="https://instagram.com/{{constellation.social.instagram}}" class="text-white font-weight-bolder">Instagram</a>
+    <a href="https://instagram.com/{{constellation.social.instagram}}" target="_blank" class="text-white font-weight-bolder">Instagram</a>
     {{/if}}
   </div>
 
   <div class="mb-3">
     {{#if constellation.social.github}}
-    <a href="https://github.com/{{constellation.social.github}}" class="text-white font-weight-bolder">GitHub</a>
+    <a href="https://github.com/{{constellation.social.github}}" target="_blank" class="text-white font-weight-bolder">GitHub</a>
     {{/if}}
   </div>
 
   <div class="mb-3">
     {{#if constellation.social.youtube}}
-    <a href="https://youtube.com/@{{constellation.social.youtube}}" class="text-white font-weight-bolder">YouTube</a>
+    <a href="https://youtube.com/@{{constellation.social.youtube}}" target="_blank" class="text-white font-weight-bolder">YouTube</a>
     {{/if}}
   </div>
 
   <div class="mb-3">
     {{#if constellation.social.tiktok}}
-    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" class="text-white font-weight-bolder">TikTok</a>
+    <a href="https://tiktok.com/@{{constellation.social.tiktok}}" target="_blank" class="text-white font-weight-bolder">TikTok</a>
     {{/if}}
   </div>
 
   <div class="mb-3">
     {{#if constellation.social.twitch}}
-    <a href="https://twitch.tv/{{constellation.social.twitch}}" class="text-white font-weight-bolder">Twitch</a>
+    <a href="https://twitch.tv/{{constellation.social.twitch}}" target="_blank"  class="text-white font-weight-bolder">Twitch</a>
     {{/if}}
   </div>
 
